--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-2-do-while.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-2-do-while.mdx
@@ -15,8 +15,6 @@ import doWhileLoopSlide06 from './images/control-flow-statements-in-depth/contro
 import doWhileLoopSlide07 from './images/control-flow-statements-in-depth/control-flow-do-while-loop-07.png';
 import doWhileLoopSlide08 from './images/control-flow-statements-in-depth/control-flow-do-while-loop-08.png';
 import doWhileLoopSlide09 from './images/control-flow-statements-in-depth/control-flow-do-while-loop-09.png';
-import doWhileLoopSlide10 from './images/control-flow-statements-in-depth/control-flow-do-while-loop-10.png';
-import doWhileLoopSlide11 from './images/control-flow-statements-in-depth/control-flow-do-while-loop-11.png';
 
 The do while loop is the post-test loop in C#. These loops are rarely used but are useful to know about.
 
@@ -77,9 +75,8 @@ export const sliderImagesDoWhileLoop = [
     altText: "Lines 1-3: The string variable 'again' is allocated space on the stack.",
     tipStart: 1,
     tips: [
-      "Lines 1 and 2 import some System librarires",
-      "Line 3 allocates space on the stack for the string variable 'again'",
-      "The program counter is increased from line 3 to 4"
+      "Line 1 allocates space on the stack for the string variable 'again'",
+      "The program counter is increased from line 1 to 2"
     ]
   },
   {
@@ -87,75 +84,74 @@ export const sliderImagesDoWhileLoop = [
     altText: "Line 4 is the keyword 'do' which indicates the start of a do-while loop",
     tipStart: 2,
     tips: [
-      "Line 4 is the keyword 'do' which indicates the start of a do-while loop",
-      "Note that there is no test condition associated with the 'do' keyword, so the program proceeds and the counter increments to line 5"
+      "Line 4 is the keyword 'do' which indicates the start of the do-while loop",
+      "Note that there is no test condition associated with the 'do' keyword, so the program will proceed into the do block below it, which will always run at least once",
+      "The counter increments from line 3 (the opening brace of the do-while block) to line 4 (the first statement in the do-while block)"
     ]
   },
   {
     src: doWhileLoopSlide03.src,
-    altText: "The opening brace is encountered, indicating the start of the do-while block",
+    altText: "Lines 3-6 print 'Hello' and 'Again: ' to the terminal then read in user input (in this case 'y'), storing it in the 'again' variable on the stack",
     tipStart: 3,
     tips: [
-      "The opening brace is encountered, indicating the start of the do-while block",
-      "The program counter increments to line 6"
+      "Lines 3-6 print 'Hello' and 'Again: ' to the terminal then read in user input (in this case 'y'), and store it in the 'again' variable on the stack",
+      "The program counter increases to line 7"
     ]
   },
   {
     src: doWhileLoopSlide04.src,
-    altText: "Line 6 writes 'Hello' to the terminal",
+    altText: "Line 9 tests the condition, which evaluates to true, and jumps back up to the start of the do-while block (lines 3,4)",
     tipStart: 4,
     tips: [
-      "Line 6 writes 'Hello' to the terminal",
-      "The program counter increments to line 7"
+      "Line 9 encounters the closing right brace, which indicates the end of this iteration of the do-while block of code",
+      "There is a condition associated with the end of this iteration, which is then tested",
+      "Here, this condition evaluates to <span class='booleanTrue'>true</span>, and so the program counter will jump back up to the start of the do-while block, from line 3 (the opening brace) to line 4 (the first statement of the do-while block)"
     ]
   },
   {
     src: doWhileLoopSlide05.src,
-    altText: "Line 7 writes 'Again: ' to the terminal",
+    altText: "Lines 6-8 reads user input, in this case 'y' and stores it in the variable 'again'",
     tipStart: 5,
     tips: [
-      "Line 7 writes 'Again: ' to the terminal",
-      "The program counter increments to line 8"
+      "Line 3-6 are stepped through again, in this case storing the user-input value 'y' in the 'again' variable",
+      "The program counter increases to line 7 once more"
     ]
   },
   {
     src: doWhileLoopSlide06.src,
-    altText: "Line 8 reads user input, in this case 'y' and stores it in the 'again' variable on the stack",
+    altText: "The condition is tested at the end of this iteration of the do-while block of code, and evaluates to true once more",
     tipStart: 6,
     tips: [
-      "Line 8 reads user input, in this case 'y', and stores it in the 'again' variable on the stack",
-      "The program counter increments to line 9"
+      "The test condition at line 7 evaluates to <span class='booleanTrue'>true</span> again, and so the program jumps back up to the start of the do block once more"
     ]
   },
   {
     src: doWhileLoopSlide07.src,
-    altText: "Line 9 tests the condition, which evaluates to true, and jumps back up to the start of the do-while block (line 6)",
+    altText: "Line 3-6 are stepped through again, but this time the user inputs 'n'",
     tipStart: 7,
     tips: [
-      "Line 9 encounters the closing right brace, which indicates the end of this iteration of the do-while block of code",
-      "There is a condition associated with the end of this iteration, which is then tested",
-      "The condition compares the user input stored in the 'again' variable ('y') with 'y' or 'Y'",
-      "This evaluates to <span class='booleanTrue'>true</span>, and so the program counter will jump back up to the start of the do-while block, line 6"
+      "Line 3-6 are stepped through again, but this time the user inputs 'n'",
+      "The program counter increases to line 7 once more"
     ]
   },
   {
     src: doWhileLoopSlide08.src,
-    altText: "Lines 6-8 reads user input, in this case 'n' and stores it in the variable 'again'",
+    altText: "With 'n' input, the test condition evaluates to false, signalling the end of the do-while loop",
     tipStart: 8,
     tips: [
-      "Line 6-7 are stepped through again, printing 'Hello' and 'Again: ' to the terminal",
-      "Line 8 again reads the user input ('n') and stores it in the string variable 'again'"
+      "With 'n' input, the test condition evaluates to <span class='booleanFalse'>false</span>, signalling the end of the do-while loop",
+      "The program counter steps to line 8"
     ]
   },
   {
     src: doWhileLoopSlide09.src,
-    altText: "The condition is tested at the end of this iteration of the do-while block of code, and evaluates to false, ending the program.",
+    altText: "Line 8 runs, printing 'Bye...' to the terminal and the program ends",
     tipStart: 9,
     tips: [
-      "The condition associated with the end of this iteration of the do-while block compares the user input stored in the 'again' variable ('n') with 'y' or 'Y'",
-      "This time it evaluates to <span class='booleanFalse'>false</span>, and so the program counter increases and the program ends"
+      "Line 8 runs, printing 'Bye...' to the terminal",
+      "The program counter increments, and the program ends"
     ]
-  },
+  }
 ];
 
 Notice how the do marks the start of the statements to repeat, and the while evaluates the condition and jumps back as needed. As with the while loop, this condition is only checked when the computer is at that location in the code. This works in with the general idea of building our program in sequence, using defined control flow statements.
