--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-2-case.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-2-case.mdx
@@ -126,50 +126,56 @@ export const sliderImagesCaseStatement = [
   }
 ];
 
-The case statement is the second kind of branching statement. This allows you to create paths that execute based on matching a value from an expression. This allows one case statement to handle many alternative paths, where each path checks a simple equality check against a single value.
+The case statement is the second kind of branching statement. It allows you to create paths that execute code based to value of an expression. This allows one case statement to handle many alternative paths.
 
+![Case statement selectively runs multiple branches of code](./images/statement-case.png "Case statement selectively runs multiple branches of code")
 
-<a id="FigureCaseStatement"></a>
+{/* TODO: add dots background */}
 
-![Figure x.y: Case statement selectively runs multiple branches of code](./images/statement-case.png "Case statement selectively runs multiple branches of code")
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Case statement selectively runs multiple branches of code</div><br/>
+## `Case` Statement -- when, why, and how
 
-:::note
+The case statement is a more specialised way of branching in code, so it tends to be used less frequently than the [if statement](../03-1-if). To use a case statement you need to have a single expression. Each branch of the case statement has a value it tests the expression against, and only executes if the two values match.
 
-- The case statement is a kind of **instruction**. It allows you to command the computer to select a path based on the value of an expression.
-- Each path within the case statement has a value. When the computer executes the case statement's expression is compared against each path's value to determine which path to take.
-- Older languages limit the case statement to work only with integers and individual characters.
-- The case statement has one entry point, multiple paths, and then one exit point.
-
-:::
-
-## Case Statement - Why, When, and How
-
-The case statement is a more specialised branch, so it tends to be used less frequently than the [if statement](../03-1-if). To use a case statement, you need to have a single expression and branches that only test if that expression matches a given value.
-
-Looking back at the example we used for the if statement, you should see that could be coded as a case statement. Each branch only tested if the language entered by the user matched a fixed value. When the language was "C#", we ran one block, when it was "C" or "C++" we ran another, and when it was anything else we ran a different block. This is exactly the right set of requirements for using a case statement.
+Looking back at the [example](../03-1-if#multiple-if-statements-combined) we gave for using multiple if statements, we could convert this code to a single case statement. Each branch would test if the language entered by the user matched a fixed value. When the language is "C#", our case statement would run one block; when it is "C" or "C++" our case statement would run another block. There are no limits to the number of cases a single case statement can have, as long as every branch has a unique value to test for.
 
 :::tip[If or case?]
-
-You can code any case statement as a series of if statements. The if statement is the more flexible of the branching statements, so this is possible. This means you will use the if statement for most things.
-
+You can code any case statement as a series of if statements. However, the case statement is a bit neater and generally preferred if possible. The if statement is the more flexible of the branching statements, so you will use it for most things.
 :::
 
 ## In C#
 
 :::tip[Syntax]
-
-The syntax for the case statement in C# uses the keyword **switch** followed by the expression to test. Within the braces. you then have a list of cases where each case has the value to match followed by a colon (:) and a list of statements. When a case is matched, the computer jumps to the statement within that case and runs the sequence from there. This means that it will drop through into the following cases unless you add a [break](../05-1-break) statement. The break is used to jump to the end of the case statement, ensuring that you skip over paths you do not want to run. This ability to fall through to other cases can be used to combine multiple case branches, as you will see in the example below.
+The following diagram shows the C# syntax for a case statement.
 
 ![The case statement showing switch, then an expression, and a list of cases](./images/case-statement.png)
-
 :::
 
-## How does case work?
+The syntax for the case statement in C# uses the keyword **switch** followed by the expression to test. 
+Within the curly braces you then have a list of cases.
+Each case has a value to match followed by a colon (`:`) and a list of statements.
+The final case is labelled with the `default` keyword.
+This optional branch contains code you want to execute if none of the other cases matched.
 
-The case statement works in a very similar way to the if statement we worked through previously. The following code will achieve the same output as the example from the if statement page. With this code, you enter the value to check in the parenthesis after the **switch** keyword. For this example, the value we are looking to match is in the `language` variable. Within the body of the case statement you then have the separate cases you want to match. 
+When a case is matched (i.e., the value of the expression matches the value of the case), the computer jumps to the first statement within that case and runs the code in sequence from that point.
+This includes the code in the following cases!
+You might be wondering why -- surely when the computer encounters the next `case` it will see that the values don't match and not run that branch?
+It might seem unintuitive, but once a case has been matched, the computer basically just ignores all other "case" tests in the same case statement.
+This allows the computer to "drop through" into other cases, which can be used to combine multiple branches.
 
-Notice that we need to embed the [break](../05-1-break) statement to indicate the end of the instructions for an individual case. Also, notice how we use this to join the "C" and "C++" cases. This means that when the "C" path is matched, the control will flow through into the same set of statements that exist for the "C++" branch.
+If you want the computer to skip to the end of a case statement, you must use the [break](../05-1-break) statement.
+Break is used to jump to the end of the case statement, ensuring that you skip over paths you do not want to run.
+We will explore the break statement in more detail soon, but for now you just need to know that it will tell the computer to jump to the end of a case statement, and without it the code from the following cases will be executed.
+
+## How does `case` work?
+
+The case statement works in a very similar way to the if statement we worked through previously. The following code will achieve the same output as the [last example](../03-1-if#multiple-if-statements-combined) from the if statement page.
+
+In this example, the value we want to check is whatever the user entered, which has been stored in the `language` variable.
+So, `language` goes in parentheses right after the `switch` keyword.
+ Within the body of the case statement you then have the separate cases you want to match.
+
+Notice that we have used the [break](../05-1-break) statement at the end of the "C#" and "C++" branches to indicate the end of the instructions for these individual cases. Also notice how we intentionally do not use a break statement in the "C" case. This means that when the "C" path is matched, the control will flow through into the same set of statements that exist for the "C++" branch, and we have avoided needing to repeat the same code in both branches.
+Finally, notice that there is no break statement in the `default` case, because there is no code for the computer to "drop through" into.
 
 ```csharp
 using static System.Console;
@@ -181,15 +187,15 @@ language = ReadLine();
 
 switch (language)
 {
-  case "C#":
-    WriteLine("Good choice, C# is a fine language.");
-    break;
-  case "C":
-  case "C++":
-    WriteLine("These are great low level languages - we will be using these soon!");
-    break;
-  default:
-    WriteLine("Well... good luck with that!");
+    case "C#":
+        WriteLine("Good choice, C# is a fine language.");
+        break;
+    case "C":
+    case "C++":
+        WriteLine("These are great languages.");
+        break;
+    default:
+        WriteLine("Well... good luck with that!");
 }
 
 WriteLine("Great chat!");
@@ -202,5 +208,14 @@ Use the following images to see how this code runs.
 :::tip[Attention]
 
 Grouping cases as shown here is okay, but to help avoid unexpected fall through, the C# language will give you an error if you do not have a break statement if you have code within a branch. You can jump to another case at the end of any given case by using the `goto case` and providing the constant you want to jump to or `goto default`.
+
+:::
+
+:::note[Summary]
+
+- The case statement is a kind of **instruction**. It allows you to command the computer to select a path based on the value of an expression.
+- Each path within the case statement has a value. When the computer executes the case statement's expression is compared against each path's value to determine which path to take.
+- Older languages limit the case statement to work only with integers and individual characters.
+- The case statement has one entry point, multiple paths, and then one exit point.
 
 :::
